<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="audios">Music</string>
    <string name="block_user">Block</string>
    <string name="block_user_long">Block user</string>
    <string name="change_password">Change password</string>
    <string name="chat_dnd">Do not disturb</string>
    <string name="comment_deleted">Comment deleted.</string>
    <string name="comment_restore">Undo</string>
    <string name="comments">Comments</string>
    <string name="copy_link">Copy link</string>
    <string name="edit_group">Manage community</string>
    <string name="edit_profile">Edit profile</string>
    <string name="email">Email</string>
    <string name="enable">Enable</string>
    <string name="fave_title">Bookmarks</string>
    <string name="favorites_add">Add to bookmarks</string>
    <string name="favorites_remove">Remove from bookmarks</string>
    <string name="feedback">Feedback</string>
    <string name="friends">Friends</string>
    <string name="games">Games</string>
    <string name="group_info">Info</string>
    <string name="invite_friends">Invite friends</string>
    <string name="likes">Likes</string>
    <string name="mentions">Mentions</string>
    <string name="menu_groups">Communities</string>
    <string name="messages">Messages</string>
    <string name="newsfeed">News</string>
    <string name="open_in_browser">Open in a browser</string>
    <string name="page_address">Short name</string>
    <string name="phone_number">Phone number</string>
    <string name="photos">Photos</string>
    <string name="replies">Replies</string>
    <string name="report_content">Report</string>
    <string name="search">Search</string>
    <string name="send_gift">Send a gift</string>
    <string name="sett_app">Application</string>
    <string name="sett_app_restart_required">Application restart is required for this setting to take effect</string>
    <string name="sett_audio_cache">Music cache</string>
    <string name="sett_big_images_mobile">Big photos on mobile network</string>
    <string name="sett_big_images_mobile_summary">Load big photos in posts when using 3G</string>
    <string name="sett_birthdays">"Friends' birthdays"</string>
    <string name="sett_cache">Cache</string>
    <string name="sett_cache_location">Location</string>
    <string name="sett_chrome_custom_tabs">In-App Browser</string>
    <string name="sett_chrome_custom_tabs_summary">Open external links within the app</string>
    <string name="sett_clear_audio_cache">Clear music cache</string>
    <string name="sett_clear_img_cache">Clear image cache</string>
    <string name="sett_clear_messages_cache">Clear messages cache</string>
    <string name="sett_compress_photos">Compress photos on upload</string>
    <string name="sett_compress_videos">Compress videos on upload</string>
    <string name="sett_dnd_cancel">Enable notifications</string>
    <string name="sett_enable_audio_cache">Cache music</string>
    <string name="sett_enable_comments">Comments</string>
    <string name="sett_flist_sort">Friend list order</string>
    <string name="sett_font_size">Font size</string>
    <string name="sett_force_tablet_ui">Tablet UI</string>
    <string name="sett_found_friends">New friends from contacts</string>
    <string name="sett_friend_requests">Friend requests</string>
    <string name="sett_gif_autoplay_title">Autoplay GIFs</string>
    <string name="sett_gifts">Gifts</string>
    <string name="sett_group_invites">Group invitations</string>
    <string name="sett_heads_up_notifications">Pop-up notifications</string>
    <string name="sett_https">Secure connection</string>
    <string name="sett_https_summary">Use HTTPS protocol</string>
    <string name="sett_led_color">LED color</string>
    <string name="sett_mytracker_location_crap">Location data</string>
    <string name="sett_mytracker_location_crap_summary">To improve news recommendations in your feed</string>
    <string name="sett_new_posts">Posts on your page</string>
    <string name="sett_news_banned">News filter</string>
    <string name="sett_news_banned_summary">Edit people &amp; communities that are hidden from the news feed</string>
    <string name="sett_notifications">Notifications</string>
    <string name="sett_notifications_messages_chats">Chat messages</string>
    <string name="sett_notifications_messages_private">Private messages</string>
    <string name="sett_notify_led">Blinking LED</string>
    <string name="sett_notify_sound">Sound</string>
    <string name="sett_notify_vibrate">Vibration</string>
    <string name="sett_other">Others</string>
    <string name="sett_photos_and_videos">Photos &amp; Videos</string>
    <string name="sett_post_source_list">Sources</string>
    <string name="sett_post_source_list_explain">Go to user profile or group pages to subscribe to posts notifications</string>
    <string name="sett_post_subsctiptions">News subscriptions</string>
    <string name="sett_posts">Posts on your page</string>
    <string name="sett_posts_default">Show by default</string>
    <string name="sett_reposts">Reposts</string>
    <string name="sett_save_processed_image">Save filtered photos</string>
    <string name="sett_send_by_enter">Send messages using Enter</string>
    <string name="sett_send_by_enter_summary">With hardware keyboard only</string>
    <string name="sett_sync">Contacts sync</string>
    <string name="sett_upcoming_events">Upcoming events</string>
    <string name="signup_female">Female</string>
    <string name="signup_first_name">Your first name</string>
    <string name="signup_last_name">Your last name</string>
    <string name="signup_male">Male</string>
    <string name="signup_photo">"Add a
photo"</string>
    <string name="signup_profile_select_gender">Your gender:</string>
    <string name="signup_terms">"By signing up, you agree to VK's
"<a href="1">Terms of Use</a> and <a href="2">Privacy Policy</a>.</string>
    <string name="subscribe_to_posts">Notify about new posts</string>
    <string name="videos">Videos</string>
</resources>