<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Пункты">
        <com.vkcoffee.android.ui.MaterialSwitchPreference android:title="@string/feedback" android:key="notifCount" android:defaultValue="true" />
        <com.vkcoffee.android.ui.MaterialSwitchPreference android:title="@string/messages" android:key="messCount" android:defaultValue="true" />
        <com.vkcoffee.android.ui.MaterialSwitchPreference android:title="@string/friends" android:key="friendCount" android:defaultValue="true" />
        <com.vkcoffee.android.ui.MaterialSwitchPreference android:title="@string/menu_groups" android:key="groupCount" android:defaultValue="true" />
        <com.vkcoffee.android.ui.MaterialSwitchPreference android:title="@string/photos" android:key="photoCount" android:defaultValue="true" />
        <com.vkcoffee.android.ui.MaterialSwitchPreference android:title="@string/videos" android:key="videoCount" android:defaultValue="true" />
        <com.vkcoffee.android.ui.MaterialSwitchPreference android:title="@string/games" android:key="gamesCount" android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>