<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="horizontal" android:background="@drawable/bg_list" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="15.0dip" android:textColor="@color/main_text" android:id="@id/attcah_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/comment_deleted" />
    <Button android:id="@id/comment_restore_btn" android:layout_width="wrap_content" android:layout_height="35.0dip" android:layout_margin="5.0dip" android:text="@string/comment_restore" android:singleLine="true" style="@style/grey_action_button" />
    <Button android:id="@id/comment_report_btn" android:layout_width="wrap_content" android:layout_height="35.0dip" android:layout_margin="5.0dip" android:text="@string/report_content" android:singleLine="true" style="@style/grey_action_button" />
    <Button android:id="@id/comment_block_btn" android:layout_width="wrap_content" android:layout_height="35.0dip" android:layout_margin="5.0dip" android:text="@string/block_user_long" android:singleLine="true" style="@style/grey_action_button" />
</LinearLayout>